src/objects/Utility_Service__c.object
<CustomObject>
    <fields>
        <fullName>Total_Forecasted_Consumption_kWh_Nov__c</fullName>
        <formula>Monthly_Electric_Consumption_KWH_Nov__c +  Forecasted_Add_Consumption_kWh_Nov__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Forecasted Consumption(kWh) Nov</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Forecasted_Consumption_kWh_Oct__c</fullName>
        <formula>Monthly_Electric_Consumption_KWH_Oct__c +  Forecasted_Add_Consumption_kWh_Oct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Forecasted Consumption(kWh) Oct</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Forecasted_Consumption_kWh_Sep__c</fullName>
        <formula>Monthly_Electric_Consumption_KWH_Sep__c +  Forecasted_Add_Consumption_kWh_Sep__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Forecasted Consumption(kWh) Sep</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Forecasted_Consumption_kWh__c</fullName>
        <formula>Total_Forecasted_Consumption_kWh_Jan__c + Total_Forecasted_Consumption_kWh_Feb__c + Total_Forecasted_Consumption_kWh_Mar__c + Total_Forecasted_Consumption_kWh_Apr__c + Total_Forecasted_Consumption_kWh_May__c + Total_Forecasted_Consumption_kWh_Jun__c +
Total_Forecasted_Consumption_kWh_Jul__c + Total_Forecasted_Consumption_kWh_Aug__c + Total_Forecasted_Consumption_kWh_Sep__c +
Total_Forecasted_Consumption_kWh_Oct__c + Total_Forecasted_Consumption_kWh_Nov__c + Total_Forecasted_Consumption_kWh_Dec__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Forecasted Consumption(kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Utility_Company_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Utility Company Master</label>
        <referenceTo>Utility_Company_master__c</referenceTo>
        <relationshipLabel>Utility Services</relationshipLabel>
        <relationshipName>Utility_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Utility_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Utility Company</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Utility_Company__c.RecordType.Name</field>
                <operation>notEqual</operation>
                <value>Custom</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Utility_Company__c</referenceTo>
        <relationshipLabel>Utility Services</relationshipLabel>
        <relationshipName>Utility_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Utility_Rate_Code_After_Solar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate Code After Solar</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Utility_Company__c.RecordType.Name</field>
                <operation>notEqual</operation>
                <value>Custom</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Utility_Company__c</referenceTo>
        <relationshipLabel>Utility Services (Utility Rate Code After Solar)</relationshipLabel>
        <relationshipName>Utility_Services2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Utility_Rate_Code_Before_Solar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate Code Before Solar</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Utility_Company__c.RecordType.Name</field>
                <operation>notEqual</operation>
                <value>Custom</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Utility_Company__c</referenceTo>
        <relationshipLabel>Utility Services (Utility Rate Code Before Solar)</relationshipLabel>
        <relationshipName>Utility_Services1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Utility_Value_of_Solar_Tariff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Utility Value of Solar Tariff</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Utility_Company__c.RecordType.Name</field>
                <operation>notEqual</operation>
                <value>Custom</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Utility_Company__c</referenceTo>
        <relationshipLabel>Utility Services (Utility Value of Solar Tariff)</relationshipLabel>
        <relationshipName>Utility_Services3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Valid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Valid is Utility Pricing ran without any error</description>
        <inlineHelpText>Valid is Utility Pricing ran without any error</inlineHelpText>
        <label>Valid</label>
        <type>Checkbox</type>
    </fields>
    <label>Utility Service</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Meter ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Utility Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>